Pency clone practica

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <h1><a class="navbar-brand" href="#">PENCY</a></h1>
+          <a class="navbar-brand" href="#">PENCY</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
