pency clone nuevo

--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@
                 <li><a href="#">Ayuda</a></li>
             </ul>
             <ul>
-                <li><a href="#"><img class="footer-icon" src="https://icongr.am/entypo/linkedin.svg?size=128&color=ffffff" alt=""></a></li>
-                <li><a href="#"><img class="footer-icon" src="https://icongr.am/entypo/linkedin.svg?size=128&color=ffffff" alt=""></a></li>
-                <li><a href="#"><img class="footer-icon" src="https://icongr.am/entypo/linkedin.svg?size=128&color=ffffff" alt=""></a></li>
-                <li><a href="#"><img class="footer-icon" src="https://icongr.am/entypo/linkedin.svg?size=128&color=ffffff" alt=""></a></li>
+                <li><a href="#"><img class="footer-icon" src="https://icongr.am/entypo/instagram.svg?size=128&color=ffffff" alt=""></a></li>
+                <li><a href="#"><img class="footer-icon" src="https://icongr.am/feather/phone-call.svg?size=128&color=ffffff" alt=""></a></li>
+                <li><a href="#"><img class="footer-icon" src="https://icongr.am/entypo/facebook.svg?size=128&color=ffffff" alt=""></a></li>
+                <li><a href="#"><img class="footer-icon" src="https://icongr.am/entypo/twitter.svg?size=128&color=ffffff" alt=""></a></li>
             </ul>
         </div>
 
