pency clone nuevo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <main class="main-content">
              <div class="main-content-1">
                 <div class="main-pic">
-                    <img class="main-pic-img" src="./assets/imgs/tienda-online.svg" alt="Tienda-online">
+                    <img class="main-pic-img img-fluid" src="./assets/imgs/tienda-online.svg" alt="Tienda-online">
                 </div>
   
                 <div class="main-texto">
@@ -87,14 +87,14 @@
                 </div>
     
                 <div class="main-pic">
-                    <img class="main-pic-img" src="./assets/imgs/vende-online-facilmente.svg" alt="Vende-online">
+                    <img class="main-pic-img img-fluid" src="./assets/imgs/vende-online-facilmente.svg" alt="Vende-online">
                 </div>
              </div>
 
             <!--3ra row-->
             <div class="main-content-3">
                 <div class="main-pic">
-                    <img class="main-pic-img" src="./assets/imgs/menu-online-qr.svg" alt="Menú-online">
+                    <img class="main-pic-img img-fluid" src="./assets/imgs/menu-online-qr.svg" alt="Menú-online">
                 </div>
     
                 <div class="main-texto">
@@ -112,7 +112,7 @@
       <div class="container-fluid descubre">
           <div class="container">
               <div class="descubre-content">
-                <img class="descubre-content-img" src="./assets/imgs/planes-y-funcionalidades.svg" alt="Planes y funcionalidades">
+                <img class="descubre-content-img img-fluid" src="./assets/imgs/planes-y-funcionalidades.svg" alt="Planes y funcionalidades">
                 <h4>Descubre las funcionalidades que incluye nuestro <b>Plan Gratuito</b> y conoce los adicionales disponibles para el <b>Plan Comercial</b></h4>
                 <h5><a href="#">Conoce las funcionalidades <img class="arrow" src="https://icongr.am/entypo/arrow-long-right.svg?size=108&color=22594b" alt="arrow"></a></h5>
               </div>
